--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "node":"18.x"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "build": "prisma generate",
+    "prisma:generate": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
